--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,18 +26,23 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build Release Files
-        run: npm run build
+        run: pnpm run build
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.MOONMARS_TOKEN }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
