--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,7 +1,7 @@
 // @see https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "com.${name}.app",
+  "appId": "com.moon-mars.app",
   "asar": true,
   "productName": "moon-mars",
   "directories": {
