--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moon-mars",
   "version": "0.0.5",
   "main": "dist-electron/main/index.js",
-  "description": "Electron + Vue + Vite boilerplate.",
+  "description": "Runs moon-mars",
   "author": "faluoys <1733524815@qq.com>",
   "license": "MIT",
   "private": true,
@@ -33,7 +33,7 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "electron": "^29.1.1",
-    "electron-builder": "^24.13.3",
+    "electron-builder": "^24.13.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "naive-ui": "^2.38.2",
